# bibliofil

./: pyproject.toml
bibliofil/: __main__.py  database.py  indexing.py  main.py  models.py  utils.py
bibliofil/cli/: __init__.py  cleanup.py  dupes.py  index.py  stats.py
