[project]
name = "bibliofil"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Skorokhod"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py7zr (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
format = [
    "ruff (>=0.14.11,<0.15.0)"
]
